Add an exercise item

--- a/tps/tp1/tp1.tex
+++ b/tps/tp1/tp1.tex
@@ -57,8 +57,8 @@ Esta práctica es para ponerse a punto con transformaciones.
     \item un punto $\worldPoint2 = (1,2)$ en coordenadas del robot A.
 \end{itemize}
 
-Responda las siguientes preguntas:
 \begin{enumerate}
+    \item Dibuje los robots y las poses y todos los sistemas de coordenadas presentes
     \item ¿Cuáles son los coordenadas del punto $\point1$ en el sistema de coordenadas del robot A?
     \item ¿Cuáles son los coordenadas del punto $\point2$ en el sistema de coordenadas del robot B?
     \item ¿Cuál es la pose del robot B en coordenadas del Mundo?
