--- a/tps/tp1/tp1.tex
+++ b/tps/tp1/tp1.tex
@@ -28,25 +28,26 @@ Se deberá entregar un informe realizado en Lyx o latex explicando los pasos rea
 Esta práctica es para ponerse a punto con transformaciones.
 
 \ejercicio Para el sistema de coordenadas canónico de un robot móvil (x: hacia adelante, y: hacia la izquierda, z: hacia arriba) dibujar el sistema de coordenadas resultante luego de aplicar la rotación dada.
- 
+
     \begin{figure}[!h]
     \centering
+    \hspace{-4cm}
     \subfloat[(0,0,0)]
     {
         \includegraphics[width=0.2\columnwidth]{./images/roll_pitch_yaw.pdf}
     }
     \hspace{3cm}
-    \subfloat[$R_{y}(90)$]
+    \subfloat[$R_{y}(\SI{90}{\degree})$]
     {
         
     }
     \hspace{3cm}
-    \subfloat[$R_{x}(-90)R_{y}(90)$]
+    \subfloat[$R_{x}(\SI{-90}{\degree})R_{y}(\SI{90}{\degree})$]
     {
     
     }
     \hspace{3cm}
-    \subfloat[$R_{z}(180)R_{x}(-90)R_{y}(90)$]{}
+    \subfloat[$R_{z}(\SI{180}{\degree})R_{x}(\SI{-90}{\degree})R_{y}(\SI{90}{\degree})$]{}
     \end{figure}
 
 \ejercicio Dado el siguiente escenario,
