--- a/tps/tp1/tp1.tex
+++ b/tps/tp1/tp1.tex
@@ -24,7 +24,7 @@
 \section{Entrega}
 Se deberá entregar un informe realizado en Lyx o latex explicando los pasos realizados y analizando los resultados obtenidos.
 
-\section{Introducción}
+\section{Ejercicios}
 Esta práctica es para ponerse a punto con transformaciones.
 
 \ejercicio Para el sistema de coordenadas canónico de un robot móvil (x: hacia adelante, y: hacia la izquierda, z: hacia arriba) dibujar el sistema de coordenadas resultante luego de aplicar la rotación dada.
