--- a/teoricas/teorica_05/src/computer_vision.tex
+++ b/teoricas/teorica_05/src/computer_vision.tex
@@ -72,7 +72,18 @@
 		\item Invariante a escala: Adaptar la región descripta a la escala de keypoint
 	\end{itemize}
 
-	\TODO{agregar imagenes SIFT BRIEF}
+ \begin{figure}[!h]
+		\centering
+		\subfloat[]
+		{
+			\includegraphics[width=0.4\columnwidth]{images/sift_gradient_pooling.pdf}
+		}
+		\hspace{1cm}
+		\subfloat[]
+		{
+			\includegraphics[width=0.2\columnwidth]{images/brief}
+		}
+	\end{figure}
 	
 \end{frame}
 
@@ -123,7 +134,7 @@
 	\frametitle{Características Visuales: Descriptor BRIEF}
 	\begin{minipage}[t]{0.35\columnwidth}
 		\begin{figure}
-			\includegraphics[width=\columnwidth]{./images/camera/brief}
+			\includegraphics[width=\columnwidth]{./images/brief}
 		\end{figure}
 	\end{minipage}\hfill{}
 	\begin{minipage}[t]{0.6\columnwidth}
