Add fundamental matrix slide

--- a/common/math_preamble.tex
+++ b/common/math_preamble.tex
@@ -45,6 +45,7 @@
 \newcommand{\cameraCenter}{\vec{o}}
 \newcommand{\worldCameraCenter}{\toCoord{\cameraCenter}{\worldCoordSystem}}
 \newcommand{\essentialMatrix}{\vec{E}}
+\newcommand{\fundamentalMatrix}{\vec{F}}
 \newcommand{\inverse}[1]{{#1}^{-1}}
 
 % Motion model
