Add localization images

--- a/teoricas/teorica_05/src/computer_vision.tex
+++ b/teoricas/teorica_05/src/computer_vision.tex
@@ -864,7 +864,7 @@
 \begin{frame}
 	\frametitle{Estimación de movimiento}
 	\footnotesize
-	\TODO{Hacer imágenes para cada caso}
+	\note{imagenes extraidas de https://vision.in.tum.de/_media/teaching/ss2020/visnav_ss2020/visnav_lecture3.pdf}
 	
 	2D-2D
     \begin{columns}
@@ -879,8 +879,7 @@
 	\end{column}
 	\begin{column}{0.3\textwidth}
 	    \begin{figure}
-			\def\svgwidth{\columnwidth}
-			\import{./images/}{tracking_reprojection_error_after.pdf_tex}
+			\includegraphics[width=0.5\columnwidth]{./images/localization_2d_2d.pdf}
 		\end{figure}
 	\end{column}
 	\end{columns}
@@ -898,8 +897,7 @@
 	\end{column}
 	\begin{column}{0.3\textwidth}
 		\begin{figure}
-			\def\svgwidth{\columnwidth}
-			\import{./images/}{tracking_reprojection_error_after.pdf_tex}
+			\includegraphics[width=0.5\columnwidth]{./images/localization_3d_2d.pdf}
 		\end{figure}
 	\end{column}
 	\end{columns}
@@ -916,8 +914,7 @@
 		\end{column}
 		\begin{column}{0.3\textwidth}
 			\begin{figure}
-				\def\svgwidth{\columnwidth}
-				\import{./images/}{tracking_reprojection_error_after.pdf_tex}
+				\includegraphics[width=0.5\columnwidth]{./images/localization_3d_3d.pdf}
 			\end{figure}
 		\end{column}
 	\end{columns}
