Add ransac images

--- a/teoricas/teorica_05/src/computer_vision.tex
+++ b/teoricas/teorica_05/src/computer_vision.tex
@@ -174,10 +174,8 @@
 	\end{itemize}
 	
 	\begin{figure}
-		\includegraphics[width=0.5\textwidth]{./images/ransac_points.pdf}
+		\includegraphics[width=0.5\textwidth]{./images/ransac1.pdf}
 	\end{figure}
-
-	\TODO{hacer imágenes similares a las del vídeo: https://youtu.be/ebMyBbkkHWk}
 	
 \end{frame}
 
@@ -186,11 +184,38 @@
 	\frametitle{RANSAC: Random Sample Consensus}
 	\footnotesize
 	
-	\TODO{hacer imágenes similares a las del vídeo: https://youtu.be/ebMyBbkkHWk}
-	
-	\begin{figure}
-		\includegraphics[width=0.5\textwidth]{./images/ransac_fitted_line.pdf}
-	\end{figure}
+	\only<1>{
+		
+		\begin{figure}
+			\includegraphics[width=0.5\textwidth]{./images/ransac1.pdf}
+		\end{figure}
+	}
+	\only<2>{
+		\begin{figure}
+			\includegraphics[width=0.5\textwidth]{./images/ransac2.pdf}
+		\end{figure}
+	}
+	\only<3>{
+		\begin{figure}
+			\includegraphics[width=0.5\textwidth]{./images/ransac3.pdf}
+		\end{figure}
+	}
+	\only<4>{
+		\begin{figure}
+			\includegraphics[width=0.5\textwidth]{./images/ransac4.pdf}
+		\end{figure}
+	}
+	\only<5>{
+		\begin{figure}
+			\includegraphics[width=0.5\textwidth]{./images/ransac5.pdf}
+		\end{figure}
+	}
+	\only<6>{
+		\begin{figure}
+			\includegraphics[width=0.5\textwidth]{./images/ransac6.pdf}
+		\end{figure}
+	}
+
 	
 \end{frame}
 \begin{frame}
