Improve ransac slides

--- a/teoricas/teorica_05/src/computer_vision.tex
+++ b/teoricas/teorica_05/src/computer_vision.tex
@@ -185,32 +185,37 @@
 	\footnotesize
 	
 	\only<1>{
-		
+		Ajuster de una recta utilizando mínimos cuadrados, asumiendo ruido constante para todos los puntos
 		\begin{figure}
 			\includegraphics[width=0.5\textwidth]{./images/ransac1.pdf}
 		\end{figure}
 	}
 	\only<2>{
+		Solo necesitamos 2 puntos para ajustar una recta, probemos con 2 puntos aleatorios
 		\begin{figure}
 			\includegraphics[width=0.5\textwidth]{./images/ransac2.pdf}
 		\end{figure}
 	}
 	\only<3>{
+		Probemos con otros 2 puntos
 		\begin{figure}
 			\includegraphics[width=0.5\textwidth]{./images/ransac3.pdf}
 		\end{figure}
 	}
 	\only<4>{
+		Probemos con otros 2 puntos
 		\begin{figure}
 			\includegraphics[width=0.5\textwidth]{./images/ransac4.pdf}
 		\end{figure}
 	}
 	\only<5>{
+		Probemos con otros 2 puntos
 		\begin{figure}
 			\includegraphics[width=0.5\textwidth]{./images/ransac5.pdf}
 		\end{figure}
 	}
 	\only<6>{
+		Utilicemos los inliers obtenidos con el mejor intento hasta ahora para realizar un ajuste con mínimos cuadrados
 		\begin{figure}
 			\includegraphics[width=0.5\textwidth]{./images/ransac6.pdf}
 		\end{figure}
