Add transformation tables

--- a/teoricas/teorica_05/src/computer_vision.tex
+++ b/teoricas/teorica_05/src/computer_vision.tex
@@ -1018,8 +1018,22 @@
 \end{frame}
 
 \begin{frame}
-	\frametitle{Tipos de transformaciones}
+	\frametitle{Tipos de transformaciones 2D}
 	\footnotesize
+	
+	\begin{figure}
+		\includegraphics[width=0.9\columnwidth]{./images/transformation_table_2d.pdf}
+	\end{figure}
+	
+\end{frame}
+
+\begin{frame}
+	\frametitle{Tipos de transformaciones 3D}
+	\footnotesize
+	
+	\begin{figure}
+		\includegraphics[width=0.6\columnwidth]{./images/transformation_table_3d.pdf}
+	\end{figure}
 	
 \end{frame}
 
