Add image pyramid

--- a/teoricas/teorica_05/src/computer_vision.tex
+++ b/teoricas/teorica_05/src/computer_vision.tex
@@ -131,13 +131,6 @@
 \end{frame}
 
 \begin{frame}
-	\frametitle{Matcheo de keypoints}
-	\footnotesize
-	
-\end{frame}
-
-
-\begin{frame}
 	\frametitle{Características Visuales: Descriptor BRIEF}
 	\begin{minipage}[t]{0.35\columnwidth}
 		\begin{figure}
@@ -160,6 +153,15 @@
 		$\text{Hamming distance} = sum (XOR(s_{1}, s_{2}))$
 	\end{block}
 	\note{utilizamos la distancia de hamming para la distancia de matcheo entre descriptores.}
+\end{frame}
+
+\begin{frame}
+	\frametitle{Extracción de features a diferentes escalas}
+	
+	\begin{figure}
+		\includegraphics[width=0.5\textwidth]{./images/image_pyramid.pdf}
+	\end{figure}
+
 \end{frame}
 
 \begin{frame}
