Add course organization

--- a/teoricas/teorica_01/src/bibliography.tex
+++ b/teoricas/teorica_01/src/bibliography.tex
@@ -6,6 +6,7 @@
     \nocite{siciliano2016handbook}
     \nocite{choset2005principles}
     \nocite{corke2017robotics}
+    \nocite{hartley2003multiple}
 
     \printbibliography
 
