--- a/teoricas/teorica_01/src/course_organization.tex
+++ b/teoricas/teorica_01/src/course_organization.tex
@@ -1,4 +1,57 @@
 \begin{frame}
-    \frametitle{Organización de la materia}
+	\frametitle{Programa de la materia (Parte I)}
+	\footnotesize
+	\begin{enumerate}
+		\item {\bf Introducción:} Historia de la Robótica Móvil. Tipos de Robots. Campos de aplicación de la Robótica Móvil. Desafíos de la Robótica Móvil.
+		
+		\item {\bf Percepción:} tipos de sensores. Sensores interoceptivos y exteroceptivos. Modelo de sensores. Ventajas y desventajas de cada tipo de sensor. Caracterización del ruido.
+		
+		\item {\bf Cinemática:} Sistemas de locomoción. Modelo Diferencial. Modelo de Ackerman. Holonómico/No-Holonómico.
+		
+		\item {\bf ROS y Gazebo:} Introducción a ROS 2. Herramientas de visualización y depuración. Recolección de Datos. Simulador Gazebo.
+		
+		\item {\bf Visión en Robótica:} Geometría proyectiva. Extracción de características visuales. Calibración Visual: intrínseca y Extrínseca. 
+		
+	\end{enumerate}
 
+\end{frame}
+
+\begin{frame}
+	\frametitle{Programa de la materia (Parte II)}
+	\footnotesize
+	\begin{enumerate}
+
+		\item {\bf Localización:} Modelo probabilístico. Teoría de Bayes. Principio de independencia de Markov. Filtros Gausianos: Filtro Extendido de Kalman. Filtros no-paramétricos: Monte Carlo e Histograma.
+
+		\item {\bf Mapeo:} Nube de puntos. Grilla de Ocupación, árbol cuaternario (Quadtree) y árbol octal (Octree), campos de distancia de signo truncado (TSDF).
+		
+		\item {\bf Localización y Mapeo Simultáneo (SLAM):} Grafo de Factores. Métodos de optimización: Método de descenso por gradiente, Método Gauss-Newton, Método Levenberg-Marquardt y Bundle Adjustment. Grupos de Lie. Álgebra de Lie. Pre-integración. Problema del Robot Secuestrado (Kidnapped Robot Problem). Relocalización. Detección y Cierre de Ciclos.
+		
+		\item {\bf Planeamiento de Caminos:} Algoritmo A*. Algoritmo de Dijkstra. Grafo de Visibilidad. Descomposición de celdas. Diagrama de Voronoi. Campos de potencial artificial, Probabilistic RoadMap, Rapidly Exploring Random Tree (RRT) y Rapidly-exploring Random Graph (RRG).
+		
+		\item {\bf Control:} Controlador proporcional-integral-derivativo (PID). Regulador Lineal Cuadrático (LQR). Control Predictivo por Modelo (MPC).
+		
+	\end{enumerate}
+
+\end{frame}
+
+\begin{frame}
+	\frametitle{Métodología de evaluación}
+	
+	Correlativas:
+	\begin{itemize}
+		\item 1er cuatrimestre de 4to año aprobado.
+	\end{itemize}
+
+	
+	Regularizar:
+	\begin{itemize}
+		\item Entregas + Trabajos Prácticos (en grupos de 2)
+		\item 1 Parcial
+	\end{itemize}
+
+	Evaluación final:
+	\begin{itemize}
+		\item Trabajo Práctico + coloquio (en grupos de 2)
+	\end{itemize}	
 \end{frame}
