--- a/teoricas/teorica_01/src/mobile_robotics_introduction.tex
+++ b/teoricas/teorica_01/src/mobile_robotics_introduction.tex
@@ -76,7 +76,7 @@
 
     \begin{columns}[T] % align columns
         \begin{column}{.4\textwidth}
-            \includegraphics[width=\columnwidth]{shakey.png}
+            \includegraphics[width=0.8\columnwidth]{shakey.png}
         \end{column}%
         \hfill%
         \begin{column}{.56\textwidth}
@@ -212,7 +212,7 @@
 \begin{frame}
     \frametitle{Esquema de control de un robot móvil}
     \centering
-    \includegraphics[width=0.9\columnwidth]{mobile_robot_scheme.pdf}
+    \includegraphics[width=0.6\columnwidth]{mobile_robot_scheme.pdf}
 \end{frame}
 
 \begin{frame}
