--- a/teoricas/teorica_01/src/tools.tex
+++ b/teoricas/teorica_01/src/tools.tex
@@ -7,9 +7,10 @@
         \item Gazebo: simulador
         \item Git: versionador
         \item Docker: contenedor
-        \item VScode: IDE de desarrollo
         \item Latex/Lyx: escritura de informes o papers
+        \item VScode: IDE de desarrollo
         \item Mendeley: manejador de papers
+        \item Yed: diagramas
+        \item inkscape: gráficos vectorizados
     \end{itemize}
-
 \end{frame}
