Improves image locations

--- a/teoricas/teorica_01/src/mobile_robotics_introduction.tex
+++ b/teoricas/teorica_01/src/mobile_robotics_introduction.tex
@@ -1,6 +1,8 @@
 \begin{frame}
 	\frametitle{Robots de ficción}
-     \includegraphics[width=\columnwidth]{wheres_wall_e_poster.jpg}
+	\begin{figure}[!h]
+		\includegraphics[width=0.7\columnwidth]{wheres_wall_e_poster.jpg}
+     \end{figure}
 \end{frame}
 
 \begin{frame}
@@ -211,8 +213,9 @@
 
 \begin{frame}
     \frametitle{Esquema de control de un robot móvil}
-    \centering
-    \includegraphics[width=0.6\columnwidth]{mobile_robot_scheme.pdf}
+    \begin{figure}[!h]
+    	\includegraphics[width=0.6\columnwidth]{mobile_robot_scheme.pdf}
+    \end{figure}
 \end{frame}
 
 \begin{frame}
