--- a/teoricas/teorica_02/slides.tex
+++ b/teoricas/teorica_02/slides.tex
@@ -35,6 +35,11 @@
 \section{Representación de posición y orientación}
 \input{src/pose.tex}
 
+\section{Práctica}
+\input{src/homework.tex}
+
+
+
 \section{Bibliografía}
 \input{src/bibliography.tex}
 
