--- a/teoricas/teorica_02/src/locomotion.tex
+++ b/teoricas/teorica_02/src/locomotion.tex
@@ -9,9 +9,9 @@
 
     El humano copia a la naturaleza para construir tipos de locomoción.
 
-    \begin{center}
-        \includegraphics[width=0.6\columnwidth]{images/biological_locomotion_systems.pdf}
-    \end{center}
+    \begin{figure}
+        \includegraphics[width=0.4\columnwidth]{images/biological_locomotion_systems.pdf}
+    \end{figure}
 
     La naturaleza tuvo que adaptar a los animales para terrenos irregulares!
 
