Add slides 07 08 09 and 10 templates

--- a/teoricas/teorica_02/src/homework.tex
+++ b/teoricas/teorica_02/src/homework.tex
@@ -2,4 +2,6 @@
 	\frametitle{Práctica}
 	\TODO{Crear una práctica donde los chicos jueguen con traslaciones, rotaciones transformaciones. Quaterniones.}
 	\TODO{Presentar el modelo car-like}
+	
+	\TODO{Robot locomotion Ackerman: https://youtu.be/4ThAi13Zbgo}
 \end{frame}
