Improve tps .tex

--- a/tps/tp1/tp1.tex
+++ b/tps/tp1/tp1.tex
@@ -6,14 +6,13 @@
 % add math preamble
 \input{../../common/math_preamble}
 
-\codigo{}
+\codigo{R-521}
 \materia{Fundamentos de Robótica Móvil}
 \titulo{Transformaciones}
 
 \soluciones
 \commentstrue
 
-\newcommand{\memcached}[0]{\texttt{memcached}}
 
 \usepackage{biblatex}
 %\addbibresource{refs.bib}
