--- a/tps/tp2/tp2.tex
+++ b/tps/tp2/tp2.tex
@@ -1,15 +1,18 @@
 \documentclass[tp]{lcc}
 
-\usepackage{hyperref}
+% add latex preamble
+\input{../../common/latex_preamble}
 
-\codigo{R-322}
+% add math preamble
+\input{../../common/math_preamble}
+
+\codigo{R-521}
 \materia{Fundamentos de Robótica Móvil}
-\titulo{Triangulación estéreo}
+\titulo{Transformaciones}
 
 \soluciones
 \commentstrue
 
-\newcommand{\memcached}[0]{\texttt{memcached}}
 
 \usepackage{biblatex}
 %\addbibresource{refs.bib}
