--- a/teoricas/teorica_04/src/ros.tex
+++ b/teoricas/teorica_04/src/ros.tex
@@ -455,7 +455,7 @@ ros2 run cpp\_pubsub listener
 
 \footnotesize
     
-Guía: \href{https://navigation.ros.org}{https://navigation.ros.org}
+Guía: \url{https://navigation.ros.org}
     
 Instalar los paquetes de Nav2 
 \begin{lstlisting}[style=bash] 
