--- a/tps/tp1/tp1.tex
+++ b/tps/tp1/tp1.tex
@@ -7,7 +7,7 @@
 \input{../../common/math_preamble}
 
 \codigo{R-521}
-\materia{Fundamentos de Robótica Móvil}
+\materia{Robótica Móvil}
 \titulo{Transformaciones}
 
 \soluciones
